# exercices-ROS2

./: README.md
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/cpp_pubsub/lib/cpp_pubsub/: exo1_listener  exo1_publisher  exo2_publisher  exo3_publisher  exo4_listener  exo4_publisher  exo5_listener  exo5_publisher  exo6_publisher  exo7_client  exo7_server  listener  talker
ros2_ws/install/cpp_pubsub/share/ament_index/resource_index/parent_prefix_path/: cpp_pubsub
ros2_ws/install/cpp_pubsub/share/cpp_pubsub/: package.sh  package.xml
ros2_ws/install/tutorial_interfaces/include/tutorial_interfaces/tutorial_interfaces/msg/detail/: computer_info__builder.hpp  computer_info__functions.c  computer_info__functions.h  computer_info__rosidl_typesupport_fastrtps_c.h  computer_info__rosidl_typesupport_introspection_c.h  computer_info__struct.h  computer_info__struct.hpp  computer_info__type_support.c  computer_info__type_support.cpp  computer_info__type_support.hpp  msg__functions.c  msg__rosidl_typesupport_fastrtps_c.h  msg__rosidl_typesupport_fastrtps_cpp.hpp  msg__rosidl_typesupport_introspection_c.h  msg__type_support.c  msg__type_support.h  msg__type_support.hpp
ros2_ws/install/tutorial_interfaces/include/tutorial_interfaces/tutorial_interfaces/srv/: add_two_ints.hpp
ros2_ws/install/tutorial_interfaces/include/tutorial_interfaces/tutorial_interfaces/srv/detail/: add_two_ints__rosidl_typesupport_fastrtps_c.h  add_two_ints__rosidl_typesupport_fastrtps_cpp.hpp  add_two_ints__struct.h  add_two_ints__struct.hpp  add_two_ints__traits.hpp  add_two_ints__type_support.cpp  add_two_ints__type_support.h  check_params__builder.hpp  check_params__rosidl_typesupport_introspection_cpp.hpp  check_params__struct.h  check_params__type_support.cpp
ros2_ws/install/tutorial_interfaces/share/ament_index/resource_index/rosidl_interfaces/: tutorial_interfaces
ros2_ws/install/tutorial_interfaces/share/tutorial_interfaces/: local_setup.sh  package.sh  package.xml
ros2_ws/install/tutorial_interfaces/share/tutorial_interfaces/cmake/: rosidl_cmake-extras.cmake
ros2_ws/install/tutorial_interfaces/share/tutorial_interfaces/srv/: AddTwoInts.idl  CheckParams.srv  CheckParams_Request.msg
ros2_ws/log/: latest_build
ros2_ws/src/cpp_pubsub/: CMakeLists.txt
ros2_ws/src/cpp_pubsub/src/: exo1_publisher.cpp  exo2_publisher.cpp  exo3_publisher.cpp  exo4_listener.cpp  exo4_publisher.cpp  exo5_listener.cpp  exo6_publisher.cpp  exo7_client.cpp  exo7_server.cpp  publisher_member_function.cpp
ros2_ws/src/tutorial_interfaces/: CMakeLists.txt
(+5 files in other folders)
